# cstea

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: main.rs
fixtures/: fill.csv  pour.csv  test.csv
src/: fill.rs  lib.rs  pour.rs
tests/: fill_pour_integration.rs
