[package]
name = "cstea"
version = "1.0.1"
authors = ["Benjamin Slater <benjamin.ed.slater@gmail.com>"]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/cstea"
repository = "https://github.com/slaterb1/cstea"
description = "An Ingredient crate for working with csv files in rettle."
license = "MIT OR Apache-2.0"

[dependencies]
rettle = "1"
csv = "1"
serde = { version = "1.0", features = ["derive"] }

[badges]
travis-ci = { repository = "slaterb1/cstea" }
maintenance = { status = "actively-developed" }
